--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    
-	<a href="itms-services://?action=download-manifest&amp;url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1"><h1>АИС УИ</h1></a>
+	<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1"><h1>АИС УИ</h1></a>
 
 	<a href="https://mail.ru"><h1>Инвентаризация</h1></a>
 
