--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
    
 	<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1"><h1>АИС УИ</h1></a>
-
+	  <a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1"><h1>АИС УИ</h1></a>
 	<a href="https://mail.ru"><h1>Инвентаризация</h1></a>
 
 
