--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
   </head>
   <body>
    
-	<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1"><h1>АИС УИ 1</h1></a>
-	<a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1"><h1>АИС УИ 2</h1></a>
-	<a href="itms-services://?action=download-manifest&amp;url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1"><h1>АИС УИ 3</h1></a>
-	<a href="itms-services://?action=download-manifest&amp;url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1"><h1>АИС УИ 4</h1></a>
+	<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1">
+		АИС УИ 1
+	</a>
+	<a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1">
+		АИС УИ 2
+	</a>
+	<a href="itms-services://?action=download-manifest&amp;url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1">
+		АИС УИ 3
+  	</a>
+	<a href="itms-services://?action=download-manifest&amp;url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1">
+		АИС УИ 4
+  	</a>
 <!-- 	<a href="https://mail.ru"><h1>Инвентаризация</h1></a> -->
 
 
