--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1">
 		АИС УИ 1
 	</a>
-	<a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1">
+	<a href="itms-services://?action=download-manifest&url=https://vitaly26.github.io/adhoc/manifest.plist">
 		АИС УИ 2
 	</a>
 	<a href="itms-services://?action=download-manifest&amp;url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1">
