--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8">
+		<title>MIMC apps</title>
+	</head>
+	<body>
    
-	<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1">
-		АИС УИ 1
-	</a>
-	<a href="itms-services://?action=download-manifest&url=https://vitaly26.github.io/adhoc/manifest.plist">
-		АИС УИ 2
-	</a>
-	<a href="itms-services://?action=download-manifest&amp;url=https%3A%2F%2Fwww.dropbox.com%2Fs%2Fjend7gb6ttwskgb%2Fmanifest.plist%3Fdl%3D1">
-		АИС УИ 3
-  	</a>
-	<a href="itms-services://?action=download-manifest&amp;url=https://www.dropbox.com/s/jend7gb6ttwskgb/manifest.plist?dl=1">
-		АИС УИ 4
-  	</a>
-<!-- 	<a href="https://mail.ru"><h1>Инвентаризация</h1></a> -->
-
-
+		<p>
+			Установить программу АИС УИ
+			<a href="itms-services://?action=download-manifest&url=https://vitaly26.github.io/adhoc/apps/fm/manifest.plist">
+				АИС УИ
+			</a>
+		</p>
+		<p>
+			Установить программу 
+			<a href="itms-services://?action=download-manifest&url=https://vitaly26.github.io/adhoc/apps/inventory/manifest.plist">
+				Инвентаризация
+			</a>
+		</p>
   </body>
 </html>
