--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
    
 		<p>
-			Установить программу АИС УИ
+			Установить программу
 			<a href="itms-services://?action=download-manifest&url=https://vitaly26.github.io/adhoc/apps/fm/manifest.plist">
 				АИС УИ
 			</a>
